tests/NormalTests/paczka1/fuzzy1/42628050.err
Error in line 4: xa2I3GDplOq A435 92,41
Error in line 5: qtI4G9uxcg A357 22,2
Error in line 13: g3UgsR A357 31,2
Error in line 17: xa2I3GDplOq A435 191,6
Error in line 24: qtI4G9uxcg A435 160,7
Error in line 35: g3UgsR A703 125,7
